@@ -110,6 +110,9 @@ Jameson Rollins <jrollins@finestructure.net>
         elvi: ads
         plus tweaks.
 
+Jakob <jakob@pipefour.org>
+        elvi: pasearch
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
