@@ -1,3 +1,7 @@
+2010-12-04  Jakob <jakob@pipefour.org>
+
+	* new elvis: pasearch.
+
 2010-12-08  Ian Beckwith  <ianb@erislabs.net>
 
 	* arxiv: Thanks to MT <mt_void@warpmail.net> for patch that fixes:
